# rust-typescript-api-comparison

./: .env.example  README.md  compare.py  docker-compose.yaml  results.txt
documentation/: README.md  routes.json
rust-api/: Cargo.toml  README.md
rust-api/migrations/: 20230627000249_init.sql
rust-api/src/: main.rs  routes.rs
rust-api/src/data/: mod.rs
rust-api/src/data/dto/: mod.rs  todo_dto.rs  update_todo.rs  update_user.rs  user_dto.rs
rust-api/src/data/repositories/: create_todo.rs  delete_todo.rs  delete_user.rs  list_todo.rs  list_user.rs  mod.rs  update_todo.rs  update_user.rs  user.rs
rust-api/src/data/services/: create_todo.rs  create_user.rs  delete_todo.rs  delete_user.rs  list_todo.rs  list_user.rs  mod.rs  update_todo.rs  update_user.rs
rust-api/src/domain/entities/: mod.rs  todo.rs  user.rs
rust-api/src/domain/errors/: create_user.rs
rust-api/src/infra/repositories/: todo.rs  user.rs
rust-api/src/presentation/controllers/: mod.rs  todo.rs  user.rs
typescript-api/: README.md  package.json  tsconfig.json
typescript-api/prisma/: schema.prisma
typescript-api/src/: server.ts
typescript-api/src/data/repositories/: check-user.ts  create-todo.ts  create-user.ts  delete-todo.ts  delete-user.ts  index.ts  list-todo.ts  list-user.ts  update-todo.ts  update-user.ts
typescript-api/src/data/services/: create-todo.ts  create-user.ts  delete-todo.ts  delete-user.ts  index.ts  list-todo.ts  list-user.ts  update-todo.ts  update-user.ts
typescript-api/src/domain/entities/: todo.ts
typescript-api/src/main/: app.ts  server.ts
(+27 files in other folders)
